working on the monster house page

--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -234,26 +234,83 @@
             <dd>Can pluck items, weakning them and dropping the item on the ground below.<br>It's particularly bad if it plucks an item you were planning on using, since it'll fall to the enemy side.<br>If you don't have the ト seal (Walrus Shield), don't hesitate to use items like Seal Staff.</dd>
           </dl>
           <h2 id="monster_house_types">Monster House Types</h2>
-          <p>Text</p>
+          <p>Regular Monster Houses include monsters only from the current floor's monster table.<br>Such Monster Houses are called "Normal (Regular) Monster House", or simply "Monster House".</p>
+          <p>All other Monster Houses are called "Special Monster Houses".<br>These can only be found in Sealed Room, Road to the End, and Shrine's Hidden Hole between 1~99F.</p>
+          <p>Special Monster Houses can include monsters outside of the current floor's monster table,<br>including high level monsters. (ex: Gigahead, Porkton, Typhoon on 12F of Road to the End).<br>They're typically extremely dangerous, especially if you begin the floor in the middle of one.<br>However, a single Sanctuary Scroll is usually enough to deal with Cyclops, Drain, and Ghost houses.</p>
+          <p>Lastly, the music differs between Monster Houses and Special Monster Houses.</p>
           <h3 id="monster_house_regular">Monster House (Regular)</h3>
-          <p>Text</p>
+          <p>Monsters from the current floor's monster table make an appearance.<br>Has a much higher chance of being generated compared to Special Monster Houses.</p>
+          <p>It's best to thin out monsters from outside the room before stepping inside.<br>Use items like arrows to wake up and defeat enemies one at a time.</p>
           <h3 id="ghost_house">Ghost House</h3>
-          <p>Text</p>
+          <ul>
+            <li>Bone Dragon Family</li>
+            <li>Pumphantasm Family</li>
+            <li>Gale Family</li>
+            <li>Yamikichi Family</li>
+          </ul>
+          <p>Typhoons detect Shiren from any location, and chase him at triple speed while passing through walls.<br>Pumphantasm can also attack through walls, so it really helps to have the 仏 seal (Ghost Sickle).<br>Ghost Houses are one of the few situations where Grass Effect Pot can truly shine,<br>since you can insert an Otogiriso to deal 100 damage to all monsters in the room while healing yourself.</p>
           <h3 id="drain_house">Drain House</h3>
+          <ul>
+            <li>Twisty Hani</li>
+            <li>Scorpion Family</li>
+            <li>Slug Family</li>
+            <li>Hunger Puppet Family</li>
+          </ul>
           <p>Text</p>
           <h3 id="cyclops_house">Cyclops House</h3>
+          <ul>
+            <li>Ironhead Family</li>
+            <li>Golem Family</li>
+            <li>Gazer Family</li>
+          </ul>
           <p>Text</p>
           <h3 id="power_house">Power House</h3>
+          <ul>
+            <li>Ironhead Family</li>
+            <li>Golem Family</li>
+            <li>Porky Family</li>
+            <li>Tiger Tosser Family</li>
+            <li>Bone Dragon Family</li>
+            <li>Shaaga Family</li>
+          </ul>
           <p>Text</p>
           <h3 id="throwing_house">Throwing House</h3>
+          <ul>
+            <li>Porky Family</li>
+            <li>Tiger Tosser Family</li>
+            <li>Horse Ronin Family</li>
+            <li>Bored Kappa Family</li>
+            <li>Water Strider</li>
+          </ul>
           <p>Text</p>
           <h3 id="magic_house">Magic House</h3>
+          <ul>
+            <li>Bat Kangaroo Family</li>
+            <li>King Tusker Family</li>
+            <li>Sheep Priest Family</li>
+            <li>Gyadon Family</li>
+          </ul>
           <p>Text</p>
           <h3 id="underwater_house">Underwater House</h3>
+          <ul>
+            <li>Zalokleft Family</li>
+            <li>Bored Kappa Family</li>
+            <li>Spearfish Family</li>
+            <li>Orcan Family</li>
+            <li>Aqua Dragon Family</li>
+            <li>Shotfish Family</li>
+          </ul>
           <p>Text</p>
           <h3 id="theft_house">Theft House</h3>
+          <ul>
+            <li>Zalokleft Family</li>
+            <li>Gamarra Family</li>
+          </ul>
           <p>Text</p>
           <h3 id="hawker_house">Hawker House</h3>
+          <ul>
+            <li>Hawker</li>
+          </ul>
           <p>Text</p>
         </div>
       </main>
