working on equipment gallery page

--- a/html/playing/equipment-gallery.html
+++ b/html/playing/equipment-gallery.html
@@ -23,13 +23,116 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Equipment Gallery</h2>
-          <p>Text</p>
+          <p>The equipment gallery is a feature where you can decorate a wall with equipment you've obtained.<br>It can be accessed by talking to the Curator (leftmost NPC) inside Napus Storage.</p>
+          <p>An important note is that <strong>once equipment is displayed, it can never be taken down from the wall</strong>.<br>Ideally you'll want to display duplicate or cursed weapons and shields, rather than strengthened ones.</p>
+          <p>Nothing special happens upon completion, so this feature is just for collection and personal enjoyment.</p>
           <h3 id="weapons">Weapons</h3>
-          <p>Text</p>
-          <p>Table</p>
+          <img src="/shiren2/image/other/gallery_weapons.png" width="590" height="438" alt="Equipment Gallery Weapons (Image)">
+          <p>The location of each weapon on the wall is roughly as follows:</p>
+          <table class="table_less_padding">
+            <tr>
+              <td>Manji-Kabura</td>
+              <td colspan="3">Kaburasutegi</td>
+              <td colspan="3">Fiery Fuuma</td>
+              <td colspan="2">Ryujin Sword</td>
+            </tr>
+            <tr>
+              <td>Mijinha</td>
+              <td colspan="3">Kengo's Katana</td>
+              <td colspan="3">Razor Wind</td>
+              <td colspan="2">Dragon Killer</td>
+            </tr>
+            <tr>
+              <td>Healing Sword</td>
+              <td colspan="3">Daisangen Sword</td>
+              <td colspan="3">Spark Sword</td>
+              <td colspan="2">Drain Buster</td>
+            </tr>
+            <tr>
+              <td>Wooden Sword</td>
+              <td colspan="3">Homing Blade</td>
+              <td colspan="3">Ivory Sword</td>
+              <td colspan="2">Ghost Sickle</td>
+            </tr>
+            <tr>
+              <td>Pickaxe</td>
+              <td colspan="3">Gobo</td>
+              <td colspan="3">Disposable Sword</td>
+              <td colspan="2">Gamarra Whip</td>
+            </tr>
+            <tr>
+              <td>Onigiri Sword</td>
+              <td colspan="3">Golden Sword</td>
+              <td colspan="3" rowspan="3">Crescent Arm</td>
+              <td colspan="2">Wonder Pickaxe</td>
+            </tr>
+            <tr>
+              <td rowspan="2">Dotanuki</td>
+              <td colspan="3" rowspan="2">Cyclops Killer</td>
+              <td colspan="2">Dried Bonito</td>
+            </tr>
+            <tr>
+              <td colspan="2">Power Pole</td>
+            </tr>
+            <tr>
+              <td>Sacred Sword</td>
+              <td rowspan="3">Fish Spear</td>
+              <td rowspan="3">Club</td>
+              <td rowspan="3">Minotaur's Axe</td>
+              <td rowspan="3">Ironhead's Head</td>
+              <td rowspan="3">Morning Star</td>
+              <td rowspan="3">Spear</td>
+              <td rowspan="3">Mallet</td>
+              <td rowspan="3">Iron Hammer</td>
+            </tr>
+            <tr>
+              <td>Katana</td>
+            </tr>
+            <tr>
+              <td>Nagamaki</td>
+            </tr>
+          </table>
           <h3 id="shields">Shields</h3>
-          <p>Text</p>
-          <p>Table</p>
+          <img src="/shiren2/image/other/gallery_shields.png" width="589" height="439" alt="Equipment Gallery Shields (Image)">
+          <p>The location of each shield on the wall is roughly as follows:</p>
+          <table class="table_less_padding">
+            <tr>
+              <td>Helix Shield</td>
+              <td>Fuuma Shield</td>
+              <td>Happy Shield</td>
+              <td>Daisangen Shield</td>
+              <td>Dodge Shield</td>
+              <td>Evasive Shield</td>
+              <td>Heavy Shield</td>
+            </tr>
+            <tr>
+              <td>Dragon Shield</td>
+              <td>Blast Shield</td>
+              <td>Counter Shield</td>
+              <td>Scale Shield</td>
+              <td>Disposable Shield</td>
+              <td>Traproid Shield</td>
+              <td>Gamarra Shield</td>
+            </tr>
+            <tr>
+              <td>Reflect Shield</td>
+              <td>Echo Shield</td>
+              <td>Wooden Shield</td>
+              <td>Holy Shield</td>
+              <td>Ivory Shield</td>
+              <td>Halberd Shield</td>
+              <td>Basilisk Shield</td>
+            </tr>
+            <tr>
+              <td>Golden Shield</td>
+              <td>Sacred Shield</td>
+              <td>Walrus Shield</td>
+              <td>Leather Shield</td>
+              <td>Beetle Shield</td>
+              <td>Tribal Shield</td>
+              <td>Nirvana Shield</td>
+            </tr>
+          </table>
         </div>
       </main>
     </div>
