add some padding to the gallery images

--- a/html/playing/equipment-gallery.html
+++ b/html/playing/equipment-gallery.html
@@ -27,7 +27,7 @@
           <p>An important note is that <strong>once equipment is displayed, it can never be taken down from the wall</strong>.<br>Ideally you'll want to display duplicate or cursed weapons and shields, rather than strengthened ones.</p>
           <p>Nothing special happens upon completion, so this feature is just for collection and personal enjoyment.</p>
           <h3 id="weapons">Weapons</h3>
-          <img src="/shiren2/image/other/gallery_weapons.png" width="590" height="438" alt="Equipment Gallery Weapons (Image)">
+          <img src="/shiren2/image/other/gallery_weapons.png" width="590" height="438" alt="Equipment Gallery Weapons (Image)" class="gallery_image">
           <p>The location of each weapon on the wall is roughly as follows:</p>
           <table class="table_less_padding">
             <tr>
@@ -93,7 +93,7 @@
             </tr>
           </table>
           <h3 id="shields">Shields</h3>
-          <img src="/shiren2/image/other/gallery_shields.png" width="589" height="439" alt="Equipment Gallery Shields (Image)">
+          <img src="/shiren2/image/other/gallery_shields.png" width="589" height="439" alt="Equipment Gallery Shields (Image)" class="gallery_image">
           <p>The location of each shield on the wall is roughly as follows:</p>
           <table class="table_less_padding">
             <tr>
