adjust tables a bit

--- a/html/item/food.html
+++ b/html/item/food.html
@@ -24,7 +24,7 @@
         <div>
           <div id="item_summary_table">
             <h2 class="page_heading">Food Summary</h2>
-            <table>
+            <table class="table_less_padding">
               <thead>
                 <tr>
                   <th scope="col">Name</th>
