correct padding for bow boy and boy cart images

--- a/html/system/monsters.html
+++ b/html/system/monsters.html
@@ -5497,8 +5497,8 @@
             </table>
             <h3 id="bow_boy_family">Bow Boy Family  (ボウヤー, コドモ戦車, オヤジ戦車, イッテツ戦車)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/bow_boy.png" width="56" height="70">
-              <img src="../../image/monster/boy_cart.png" width="80" height="85">
+              <img src="../../image/monster/bow_boy.png" width="56" height="70" id="bow_boy_image">
+              <img src="../../image/monster/boy_cart.png" width="80" height="85" id="boy_cart_image">
               <img src="../../image/monster/pop_tank.png" width="90" height="100">
               <img src="../../image/monster/cranky_tank.png" width="90" height="100">
             </div>
