working on the monster house page

--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -256,14 +256,14 @@
             <li>Slug Family</li>
             <li>Hunger Puppet Family</li>
           </ul>
-          <p>Text</p>
+          <p>These enemies don't have faster movement or ranged attacks, but instead have troublesome special attacks.<br>Items like Salty Bracelet, Song Bracelet, Level Lock Bracelet, and Scale Shield can block the effects.<br>Weapons with the ド seal (Drain Buster) will give you an advantage, and a Sanctuary Scroll<br>can be used to prevent Drain type monsters from attacking or using their special attacks.</p>
           <h3 id="cyclops_house">Cyclops House</h3>
           <ul>
             <li>Ironhead Family</li>
             <li>Golem Family</li>
             <li>Gazer Family</li>
           </ul>
-          <p>Text</p>
+          <p>Two high powered Ironhead and Golem families alongside the Gazer family could very well cause trouble.<br>Weapons with the 目 seal (Cyclops Killer) will give you an advantage here.<br>The biggest threat is Gazer's hypnosis, so it's nice to have the 山 seal (Echo Shield) as well.<br>Ironhead family mosnters can level up if they defeat monsters standing between Shiren and themselves,<br>so be careful where you stand to avoid ending up with an extra Gigahead in the room.</p>
           <h3 id="power_house">Power House</h3>
           <ul>
             <li>Ironhead Family</li>
@@ -273,7 +273,7 @@
             <li>Bone Dragon Family</li>
             <li>Shaaga Family</li>
           </ul>
-          <p>Text</p>
+          <p>Many of these monsters not only have high attack, but also have high HP.<br>One of the most dangerous types due to the presence of both Porky and Tiger Tosser families.<br>Porkton can throw stones from up to 10 tiles away, even if you're standing on a Sanctuary Scroll.<br>竜 (Dragon Killer) and 龍 (Ryujin Sword) seals will help against Shaaga and Bone Dragon families,<br>while the 目 seal (Cyclops Killer) will help against Ironhead and Golem families.<br>It's a great opportunity to earn lots of experience, but it might be best to ignore this house due to the risk.</p>
           <h3 id="throwing_house">Throwing House</h3>
           <ul>
             <li>Porky Family</li>
@@ -282,7 +282,8 @@
             <li>Bored Kappa Family</li>
             <li>Water Strider</li>
           </ul>
-          <p>Text</p>
+          <p>Sanctuary Scrolls won't help against projectiles, and Porky monsters toss stones even if you enter hallways.<br>The 身 (Dodge Shield) or 返 (Reflect Shield) seals offer protection against projectiles, but said shields<br>can only be obtained in <a href="/shiren2/html/dungeon/sealed-room.html">Sealed Room</a>, meaning you have to tackle this type of Special Monster House<br>without them in Road to the End and Shrine's Hidden Hole.</p>
+          <p>Monsters like Horse Ronin and Tiger Tosser can level up by dealing damage to other monsters.<br>Bored Kappa monsters and Water Striders will throw items found on the ground as well,<br>potentially leaving you with nothing to collect as a reward for tackling the Monster House.<br>Generally, it's best to ignore this type if you discover it while wearing a Scout Bracelet.</p>
           <h3 id="magic_house">Magic House</h3>
           <ul>
             <li>Bat Kangaroo Family</li>
@@ -290,7 +291,8 @@
             <li>Sheep Priest Family</li>
             <li>Gyadon Family</li>
           </ul>
-          <p>Text</p>
+          <p>These monsters can be quite dangerous if you don't have the 山 seal (Echo Shield).<br>Oddly, Gyadon family monsters are included in this type. (Maybe it was supposed to be Gazers?)</p>
+          <p>There's a lot that could go wrong between Bat Kangaroos speeding monsters up, King Tusker and<br>Sheep Priest monsters weakening you, and Gyadon monsters plucking your equipment and items.<br>The ト seal (Walrus Shield) will prevent Gyadon monsters from being able to pluck your items.<br>Don't underestimate the attack strength of invisible monsters when a Devil Kangaroo is present.<br>You don't want to take a hit from a level 3 monster such as Emperor Tusker early on.</p>
           <h3 id="underwater_house">Underwater House</h3>
           <ul>
             <li>Zalokleft Family</li>
@@ -300,7 +302,7 @@
             <li>Aqua Dragon Family</li>
             <li>Shotfish Family</li>
           </ul>
-          <p>Text</p>
+          <p></p>
           <h3 id="theft_house">Theft House</h3>
           <ul>
             <li>Zalokleft Family</li>
