finished monster house page

--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -302,18 +302,24 @@
             <li>Aqua Dragon Family</li>
             <li>Shotfish Family</li>
           </ul>
-          <p></p>
+          <p>Monster House with waterways in the room and fewer items that can be picked up.<br>Bored Kappa monsters will throw items, and Zaloklefts monsters will steal them,<br>so there might not be much of a reward after you're finished tackling this type of Monster House.</p>
+          <p>Freeze and Evaporate scrolls can be read to reduce the number of enemies that pose a threat.<br>Weapons with the 水 seal (Fish Spear) let you attack underwater monsters, giving you an advantage too.<br>Be sure to check for traps. In particular, you don't want items to fall in water by stepping on a Trip Stone.</p>
+          <p>There are two room patterns that can generate for this type of Monster House.<br>The first pattern has water tiles for all tiles in the room except for the outer edge of the room,<br>and the second pattern has water tiles for all tiles in the room except for a line from the entrance.<br>The room entrance will never be blocked by a waterway in either case.</p>
+          <p>If the Underwater House is generated in a map where the entire floor is one large room with waterways,<br>the two patterns mentioned above won't be applied to the room.<br>Underwater Houses will never be generated if the entire floor is one large room with walls.</p>
           <h3 id="theft_house">Theft House</h3>
           <ul>
             <li>Zalokleft Family</li>
             <li>Gamarra Family</li>
           </ul>
-          <p>Text</p>
+          <p>Special Monster House that can only be seen in <a href="/shiren2/html/dungeon/sealed-room.html">Sealed Room</a>.<br>The only monsters that spawn are Zaloklefts and Gamarras, so there's no immediate danger of collapsing.<br>However, Iron Zaloklefts can steal equipped items, so you'll want the ト seal (Walrus Shield) to block them.<br>Sealed Room doesn't have many rare items that can be found on the floor, so it might be best to just ignore it.</p>
           <h3 id="hawker_house">Hawker House</h3>
           <ul>
             <li>Hawker</li>
           </ul>
-          <p>Text</p>
+          <p>Special Monster House exclusive to Sealed Room.<br>It's the only location where Hawkers (Level 2 Traders) can be seen naturally.<br>Hawkers won't attack Shiren, so there's no danger of collapsing.</p>
+          <p>Hawkers occasionally have extremely valuable Angel Seeds for sale, so buy as many as you can.<br>Uses for Angel Seed include synthesizing the 天 seal onto a weapon to increase experience gain,<br>or inserting it into a Grass Gainer to convert it into an Angel Gainer to gain a massive amount of level ups.<br>This is especially nice if you're attempting a restricted play run such as the <a href="/shiren2/html/playing/restricted-play.html#shuten_tail_challenge">Shuten Trail Challenge</a>.</p>
+          <p>Hawkers are pushy and will force the buying window to open when they approach Shiren,<br>so it's best to handle them one at a time to avoid getting overwhelmed and irritated.<br>Note that defeating a Hawker will trigger thief mode, so avoid doing so. (Landmines are safe, though).</p>
+          <p>It's not necessarily rarer than other Special Monster Houses, but it's common to go an entire 99F run<br>without seeing one due to the large number of Monster House types that can be generated in Sealed Room.<br>(Sample: 2 Underwater, 2 Throwing, 3 Cyclops, 6 Power, 8 Ghost, 5 Drain, 5 Magic, 3 Theft, 3 Hawker)</p>
         </div>
       </main>
     </div>
