see if this golden interval image looks good

--- a/html/system/golden-interval.html
+++ b/html/system/golden-interval.html
@@ -23,6 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Golden Interval</h2>
+          <img src="/shiren2/image/other/golden_interval.png" width="800" height="327" alt="Golden Interval (Image)" class="gallery_image">
           <p>Golden Intervals are one of the unique mechanics of Shiren 2.<br>Golden Stairs can be found inside walls on certain floors of Random Dungeons.<br>A special melody plays when you first discover the Golden Stairs,<br>and climbing them leads to a bonus area called Golden Interval.</p>
           <p>Golden Intervals are Shuffle Dungeons consisting of 3~5 floors,<br>and often have powerful or exclusive items on the ground.<br>The final floor of a Golden interval doesn't spawn any monsters,<br>but instead is a single room with a treasure chest that contains a rare item.</p>
           <p>However, Golden Intervals are often more difficult than the floor range they can be found in.<br>Stronger monsters spawn (in particular, Lashaaga in the 2nd Golden Interval of Road to the End),<br>Riceballs cannot be found on the ground, items for emergencies are either nonexistent or rare,<br>and in <a href="/shiren2/html/dungeon/halfway-well.html">Halfway Well</a>'s case, traps cannot be found, and you can't exit using a Trapper Bracelet.</p>
