working on the special conditions page

--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -132,7 +132,7 @@
             <dt>Blaze Scroll</dt>
             <dd>Deals 20 damage per turn to any character standing in the fire that generates from reading the scroll.<br>Items on the ground will burn up, and tiles with traps will not be set on fire.<br>It's best to read this in a hallway to minimize item loss.</dd>
             <dt>Slumber Scroll</dt>
-            <dd>Puts all monsters in the room to sleep for 10 turns.<br>Note that mosnters will move at double speed after waking up from this effect.<br>It's best to read this when the exit is in the middle of a Monster House, rather than rely on it to clear one out.</dd>
+            <dd>Puts all monsters in the room to sleep for 10 turns.<br>Note that monsters will move at double speed after waking up from this effect.<br>It's best to read this when the exit is in the middle of a Monster House, rather than rely on it to clear one out.</dd>
             <dt>Decoy Scroll</dt>
             <dd>Provides a big advantage while inside the room, but only lasts for 10 turns.<br>It's best to either defeat monsters quickly, or retreat before it wears off and put yourself in a better position.<br>Avoid reading it when you don't have enough space to summon shadows.</dd>
             <dt>Trap Remove Scroll</dt>
@@ -153,7 +153,7 @@
             <dt>Fire Staff</dt>
             <dd>Retreat into a hallway and swing it to burn the line of monsters that followed you.<br>Use alongside Silver Arrows or Pierce Bracelet to quickly clear out enemies.</dd>
             <dt>Tunnel Staff</dt>
-            <dd>Create new hallways, allowing you to thin out more monsters using projectiles before entering the room.<br>Nice when Bored Kappa family mosnters are waiting on top of items, or if you don't have a Pierce Bracelet.<br>Be careful not to dig in a way that expands the room with you standing inside of it.</dd>
+            <dd>Create new hallways, allowing you to thin out more monsters using projectiles before entering the room.<br>Nice when Bored Kappa family monsters are waiting on top of items, or if you don't have a Pierce Bracelet.<br>Be careful not to dig in a way that expands the room with you standing inside of it.</dd>
             <dt>Miss Staff</dt>
             <dd>Effectively shuts down a monster's regular attacks.<br>Plays well with Razor Wind, since you can use a monster as a barricade while attacking the sides.</dd>
             <dt>Invisible Staff</dt>
@@ -263,7 +263,7 @@
             <li>Golem Family</li>
             <li>Gazer Family</li>
           </ul>
-          <p>Two high powered Ironhead and Golem families alongside the Gazer family could very well cause trouble.<br>Weapons with the 目 seal (Cyclops Killer) will give you an advantage here.<br>The biggest threat is Gazer's hypnosis, so it's nice to have the 山 seal (Echo Shield) as well.<br>Ironhead family mosnters can level up if they defeat monsters standing between Shiren and themselves,<br>so be careful where you stand to avoid ending up with an extra Gigahead in the room.</p>
+          <p>Two high powered Ironhead and Golem families alongside the Gazer family could very well cause trouble.<br>Weapons with the 目 seal (Cyclops Killer) will give you an advantage here.<br>The biggest threat is Gazer's hypnosis, so it's nice to have the 山 seal (Echo Shield) as well.<br>Ironhead family monsters can level up if they defeat monsters standing between Shiren and themselves,<br>so be careful where you stand to avoid ending up with an extra Gigahead in the room.</p>
           <h3 id="power_house">Power House</h3>
           <ul>
             <li>Ironhead Family</li>
